unpackaged/main/default/objects/sfsp__SalesUserPreference__c/sfsp__SalesUserPreference__c.object-meta.xml
<CustomObject>
    <label>Sales User Preference</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>AutoId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales User Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>