unpackaged/main/default/objects/sfsp__SalesUserPreference__c/fields/sfsp__AccessLevel__c.field-meta.xml
<CustomField>
    <fullName>sfsp__AccessLevel__c</fullName>
    <label>Access Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Editor</fullName>
            </value>
            <value>
                <fullName>Commenter</fullName>
                <default>true</default>
                <label>Commenter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>