unpackaged/main/default/objects/sfsp__SalesUserPreference__c/fields/sfsp__Preferences__c.field-meta.xml
<CustomField>
    <fullName>sfsp__Preferences__c</fullName>
    <label>Preferences</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>