unpackaged/main/default/objects/sfsp__SalesUserPreference__c/fields/sfsp__User__c.field-meta.xml
<CustomField>
    <fullName>sfsp__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Planning Preferences</relationshipLabel>
    <relationshipName>SalesPlanningPreferences</relationshipName>
    <type>Lookup</type>
</CustomField>